--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
       <header>
         <div class="wrapper">
           <h1>Mike Smullin's</h1>
-          <h2>personal website coming soon.</h2>
+          <h2>personal website</h2>
         </div>
       </header>
       <article>
         <div class="wrapper">
-          <p>I'm going to try maintaining something statically hosted by Github.</p>
+          <p>"It's amazing!"</p>
+          <p>"Incredibly useful."</p>
+          <p>"Relevant."</p>
+          <p>"Timely."</p>
+          <p>"Better than the alternatives."</p><br>
+          <p><a href="https://medium.com/@mikesmullin/latest">Medium.com Blog</a></p>
+          <p><a href="http://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
+          <p><a href="https://dl.dropboxusercontent.com/u/12710135/Mike%20Smullin%20Resume.pdf">Resume</a></p>
+          <p><a href="http://mikesmullin.github.io/borg-docs/">Borg Project</a></p>
+          <p><a href="http://www.smullindesign.com/">Paid Services</a></p>
         </div>
       </article>
       <aside>
