--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Acme|Nunito">
     <link rel="stylesheet" href="stylesheets/monokai_sublime.css">
     <script src="behaviors/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
     <script>
-      hljs.initHighlightingOnLoad();
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-254701-1', 'auto');
+      ga('send', 'pageview');
       
     </script>
   </body>
