publishing from wget mirror of modified master branch hosted by node express.js locally

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
           <p>"Better than the alternatives."</p><br>
           <p><a href="https://medium.com/@mikesmullin/latest">Medium.com Blog</a></p>
           <p><a href="http://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
-          <p><a href="https://dl.dropboxusercontent.com/u/12710135/Mike%20Smullin%20Resume.pdf">Resume</a></p>
+          <p><a href="http://cdn.smullindesign.com/Mike%20Smullin%20Resume.pdf">Resume</a></p>
           <p><a href="http://mikesmullin.github.io/borg-docs/">Borg Project</a></p>
           <p><a href="http://www.smullindesign.com/">Paid Services</a></p>
-          <p><a href="http://games.mikesmullin.com/">Games</a></p>
         </div>
       </article>
       <aside>
