--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <p><a href="http://cdn.smullindesign.com/Mike%20Smullin%20Resume.pdf">Resume</a></p>
           <p><a href="http://mikesmullin.github.io/borg-docs/">Borg Project</a></p>
           <p><a href="http://www.smullindesign.com/">Paid Services</a></p>
+          <p><a href="http://games.mikesmullin.com/">Games</a></p>
         </div>
       </article>
       <aside>
