--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <p><a href="http://mikesmullin.github.io/borg-docs/">Borg DevOps</a></p>
           <p><a href="http://www.smullindesign.com/">Paid Services</a></p>
           <p><a href="http://codepen.io/mikesmullin/">Codepen</a></p>
+          <p><a href="http://steamcommunity.com/id/mikesmullin/myworkshopfiles/?appid=0&amp;sort=score&amp;browsefilter=myfiles&amp;view=imagewall">Steam Workshop Mods</a></p>
           <p><a href="http://games.mikesmullin.com/">Games</a></p>
         </div>
       </article>
