--- a/index.html
+++ b/index.html
@@ -23,19 +23,15 @@
       </header>
       <article>
         <div class="wrapper">
-          <p>"It's amazing!"</p>
-          <p>"Incredibly useful."</p>
-          <p>"Relevant."</p>
-          <p>"Timely."</p>
-          <p>"Better than the alternatives."</p><br>
-          <p><a href="https://medium.com/@mikesmullin/latest">Medium.com Blog</a></p>
+          <p>Remember when it was cool to register your name as a .com tld?</p>
+          <p>Try these, instead:</p><br>
+          <p><a href="http://github.com/mikesmullin">Github Repos</a></p>
+          <p><a href="http://mikesmullin.github.io/borg-docs/">Borg DevOps Tooling</a></p>
+          <p><a href="http://steamcommunity.com/id/mikesmullin/myworkshopfiles/?appid=0&amp;sort=score&amp;browsefilter=myfiles&amp;view=imagewall">Steam Workshop Mods</a></p>
+          <p><a href="http://games.mikesmullin.com/">Indie Game in a Day Entries</a></p>
+          <p><a href="http://codepen.io/mikesmullin/">Codepen Scribbles</a></p>
           <p><a href="http://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
           <p><a href="http://cdn.smullindesign.com/Mike%20Smullin%20Resume.pdf">Resume</a></p>
-          <p><a href="http://mikesmullin.github.io/borg-docs/">Borg DevOps</a></p>
-          <p><a href="http://www.smullindesign.com/">Paid Services</a></p>
-          <p><a href="http://codepen.io/mikesmullin/">Codepen</a></p>
-          <p><a href="http://steamcommunity.com/id/mikesmullin/myworkshopfiles/?appid=0&amp;sort=score&amp;browsefilter=myfiles&amp;view=imagewall">Steam Workshop Mods</a></p>
-          <p><a href="http://games.mikesmullin.com/">Games</a></p>
         </div>
       </article>
       <aside>
