--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           <p><a href="http://steamcommunity.com/id/mikesmullin/myworkshopfiles/?appid=0&amp;sort=score&amp;browsefilter=myfiles&amp;view=imagewall">Steam Workshop Mods</a></p>
           <p><a href="http://games.mikesmullin.com/">Indie Game in a Day Entries</a></p>
           <p><a href="http://codepen.io/mikesmullin/">Codepen Scribbles</a></p>
+          <p><a href="https://www.twitch.tv/mikesmullin">Twitch Streams</a></p>
+          <p><a href="https://www.youtube.com/mikesmullin">YouTube Videos</a></p>
           <p><a href="http://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
           <p><a href="http://cdn.smullindesign.com/Mike%20Smullin%20Resume.pdf">Resume</a></p>
         </div>
