--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>Mike Smullin</title>
     <link rel="stylesheet" href="stylesheets/global.css">
     <script>
+      // use https only
+      if (window.location.protocol === 'http:') {
+        window.location = 'https:'+ window.location.href.substr(5);
+      }
+    </script>
+    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -30,8 +36,8 @@
           <p><a href="http://steamcommunity.com/profiles/76561197995164346/myworkshopfiles/?appid=0&amp;sort=score&amp;browsefilter=myfiles&amp;view=imagewall">Steam Workshop Mods</a></p>
           <p><a href="http://games.mikesmullin.com/">Indie Game in a Day Entries</a></p>
           <p><a href="http://codepen.io/mikesmullin/">Codepen Scribbles</a></p>
-          <p><a href="https://www.twitch.tv/mikesmullin">Twitch Streams</a></p>
-          <p><a href="https://www.youtube.com/mikesmullin">YouTube Videos</a></p>
+          <p><a href="http://www.twitch.tv/mikesmullin">Twitch Streams</a></p>
+          <p><a href="http://www.youtube.com/mikesmullin">YouTube Videos</a></p>
           <p><a href="http://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
         </div>
       </article>
