--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-254701-1', 'auto');
       ga('send', 'pageview');
       
@@ -31,14 +31,14 @@
         <div class="wrapper">
           <p>Remember when it was cool to register your name as a .com tld?</p>
           <p>Try these, instead:</p><br>
-          <p><a href="http://github.com/mikesmullin">Github Repos</a></p>
-          <p><a href="http://mikesmullin.github.io/borg-docs/">Borg DevOps Tooling</a></p>
-          <p><a href="http://steamcommunity.com/profiles/76561197995164346/myworkshopfiles/?appid=0&amp;sort=score&amp;browsefilter=myfiles&amp;view=imagewall">Steam Workshop Mods</a></p>
-          <p><a href="http://games.mikesmullin.com/">Indie Game in a Day Entries</a></p>
-          <p><a href="http://codepen.io/mikesmullin/">Codepen Scribbles</a></p>
-          <p><a href="http://www.twitch.tv/mikesmullin">Twitch Streams</a></p>
-          <p><a href="http://www.youtube.com/mikesmullin">YouTube Videos</a></p>
-          <p><a href="http://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
+          <p><a href="https://github.com/mikesmullin">Github Repos</a></p>
+          <p><a href="https://mikesmullin.github.io/borg-docs/">Borg DevOps Tooling</a></p>
+          <p><a href="https://steamcommunity.com/profiles/76561197995164346/myworkshopfiles/?appid=0&amp;sort=score&amp;browsefilter=myfiles&amp;view=imagewall">Steam Workshop Mods</a></p>
+          <p><a href="https://games.mikesmullin.com/">Indie Game in a Day Entries</a></p>
+          <p><a href="https://codepen.io/mikesmullin/">Codepen Scribbles</a></p>
+          <p><a href="https://www.twitch.tv/mikesmullin">Twitch Streams</a></p>
+          <p><a href="https://www.youtube.com/mikesmullin">YouTube Videos</a></p>
+          <p><a href="https://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
         </div>
       </article>
       <aside>
@@ -48,7 +48,7 @@
         <div class="wrapper"></div>
       </footer>
     </div>
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Acme|Nunito">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Acme|Nunito">
     <link rel="stylesheet" href="stylesheets/monokai_sublime.css">
     <script src="behaviors/highlight.pack.js"></script>
     <script>
