--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <p><a href="https://steamcommunity.com/profiles/76561197995164346/myworkshopfiles/?appid=0&amp;sort=score&amp;browsefilter=myfiles&amp;view=imagewall">Steam Workshop Mods</a></p>
           <p><a href="https://games.mikesmullin.com/">Indie Game in a Day Entries</a></p>
           <p><a href="https://codepen.io/mikesmullin/">Codepen Scribbles</a></p>
-          <p><a href="https://www.twitch.tv/mikesmullin">Twitch Streams</a></p>
-          <p><a href="https://www.youtube.com/mikesmullin">YouTube Videos</a></p>
+          <p><a href="https://www.youtube.com/channel/UChSTcCmRwx6GJE9aLB6SYwg">YouTube Videos</a></p>
+          <p><a href="https://soundcloud.com/shtankybeats">SoundCloud Beats</a></p>
           <p><a href="https://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
         </div>
       </article>
