--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p><a href="https://www.youtube.com/channel/UChSTcCmRwx6GJE9aLB6SYwg">YouTube Videos</a></p>
           <p><a href="https://soundcloud.com/shtankybeats">SoundCloud Beats</a></p>
           <p><a href="https://linkedin.com/in/mikesmullin">LinkedIn.com Profile</a></p>
-          <p><a href="https://twitter.com/lunarcavyhvyind">Twitter</a></p>
+          <p><a href="https://twitter.com/lunarcavyhvyind">Twitter/X</a></p>
         </div>
       </article>
       <aside>
